<resources>
  <string name="app_name">Kohii in Action</string>
  <string name="small_text">
    "All material objects, regardless of size, have a resting elevation, or default elevation "
    "that does not change. If an object changes elevation, it should return to its resting "
    "elevation as soon as possible."
  </string>
  <string name="large_text">
    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n"
    "The fundamentals of light, surface, and movement are key to conveying how objects move, "
    "interact, and exist in space and in relation to each other. Realistic lighting shows "
    "seams, divides space, and indicates moving parts.\n\n"

    "Bold, graphic, intentional.\n\n"

    "The foundational elements of print based design typography, grids, space, scale, color, "
    "and use of imagery guide visual treatments. These elements do far more than please the "
    "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
    "imagery, large scale typography, and intentional white space create a bold and graphic "
    "interface that immerse the user in the experience.\n"
    "An emphasis on user actions makes core functionality immediately apparent and provides "
    "waypoints for the user.\n\n"

    "Motion provides meaning.\n\n"

    "Motion respects and reinforces the user as the prime mover. Primary user actions are "
    "inflection points that initiate motion, transforming the whole design.\n"
    "All action takes place in a single environment. Objects are presented to the user without "
    "breaking the continuity of experience even as they transform and reorganize.\n"
    "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
    "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

    "3D world.\n\n"

    "The material environment is a 3D space, which means all objects have x, y, and z "
    "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
    "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
    "position along the z-axis and has a standard 1dp thickness.\n"
    "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
    "emulated by manipulating the y-axis.\n\n"

    "Light and shadow.\n\n"

    "Within the material environment, virtual lights illuminate the scene. Key lights create "
    "directional shadows, while ambient light creates soft shadows from all angles.\n"
    "Shadows in the material environment are cast by these two light sources. In Android "
    "development, shadows occur when light sources are blocked by sheets of material at "
    "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
    "y-axis only. The following example shows the card with a height of 6dp.\n\n"

    "Resting elevation.\n\n"

    "All material objects, regardless of size, have a resting elevation, or default elevation "
    "that does not change. If an object changes elevation, it should return to its resting "
    "elevation as soon as possible.\n\n"

    "Component elevations.\n\n"

    "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
    "does not vary from 6dp in one app to 16dp in another app).\n"
    "Components may have different resting elevations across platforms, depending on the depth "
    "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

    "Responsive elevation and dynamic elevation offsets.\n\n"

    "Some component types have responsive elevation, meaning they change elevation in response "
    "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
    "changes are consistently implemented using dynamic elevation offsets.\n"
    "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
    "to the component’s resting state. They ensure that elevation changes are consistent "
    "across actions and component types. For example, all components that lift on press have "
    "the same elevation change relative to their resting elevation.\n"
    "Once the input event is completed or cancelled, the component will return to its resting "
    "elevation.\n\n"

    "Avoiding elevation interference.\n\n"

    "Components with responsive elevations may encounter other components as they move between "
    "their resting elevations and dynamic elevation offsets. Because material cannot pass "
    "through other material, components avoid interfering with one another any number of ways, "
    "whether on a per component basis or using the entire app layout.\n"
    "On a component level, components can move or be removed before they cause interference. "
    "For example, a floating action button (FAB) can disappear or move off screen before a "
    "user picks up a card, or it can move if a snackbar appears.\n"
    "On the layout level, design your app layout to minimize opportunities for interference. "
    "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
    "when a user tries to pick up one of cards."
  </string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_trending">Trending</string>
  <string name="title_subscriptions">Subscriptions</string>
  <string name="title_inbox">Inbox</string>
  <string name="title_library">Library</string>
  <string name="lib_intro">
    <![CDATA[
    <strong>Kohii</strong> is a media player library. Backed by ExoPlayer, it provides easy to use Video playback, and the ability to
    automatically start/pause on user reaction to the application.
    <br><br>Not like many others, <strong>Kohii</strong>\'s mission is to keep the <i>Playback Continuity</i> across various complicated transition,
    including configuration change and fullscreen playback.
    <br><br>Demos below are part of what Kohii can do to help developers to integrate powerful playback UX with ease.
    ]]>
  </string>
  <string name="demo_title_recycler_view_0">
    Kohii + RecyclerView (Grid)
  </string>
  <string name="demo_desc_recycler_view_0">
    RecyclerView (Grid) shows a grid with both text and Videos. Video item will have span of 2 and when click to it, it will
    show a dialog and keep playing the Video there.
  </string>
  <string name="demo_title_recycler_view_1">
    Kohii + RecyclerView (List)
  </string>
  <string name="demo_desc_recycler_view_1">
    RecyclerView (1) parse content from: https://material.io/tools/theme-editor/
    \n\nClicking to an item will open Single player for it with \'Shared Element Transition\'
    learnt from \"Continuous Shared Element Transitions: RecyclerView to ViewPager\".
  </string>
  <string name="demo_title_recycler_view_1_2">
    Kohii + RecyclerView (List 2)
  </string>
  <string name="demo_title_recycler_view_2">
    Kohii + RecyclerView (2)
  </string>
  <string name="demo_desc_recycler_view_2">
    RecyclerView (2) uses sample Videos from ExoPlayer demo application.\n\nIn this demo, both DRM
    Video and non-DRM Video are presented and the PlayerView will be created on demand.
  </string>
  <string name="demo_title_recycler_view_3">
    Kohii + RecyclerView (3)
  </string>
  <string name="demo_desc_recycler_view_3">
    RecyclerView (3) replicates YouTube UX using MotionLayout and BottomSheetBehavior.\n\nClicking to
    an item will open the bottom sheet that will be scaled down to mini Player while the Video keeps
    playing smoothly.\n\nVideos from Caminandes (CC 3.0 open movie).
  </string>
  <string name="demo_title_recycler_view_5">
    Kohii + RecyclerView (4)
  </string>
  <string name="demo_desc_recycler_view_5">
    RecyclerView (4) presents the scenario of reusing a single PlayerView instance across multiple
    Playbacks/ViewHolders.\n\nVideos are from Caminandes (CC 3.0 open movie).
  </string>
  <string name="demo_title_recycler_view_4">
    Kohii + RecyclerView (4)
  </string>
  <string name="demo_desc_recycler_view_4">
    RecyclerView (5) shows how developer can control Volume of each item individually.
    The Volume info is saved/restored across configuration change thanks to Android Architecture Components.
    \n\nVideos from Caminandes (CC 3.0 open movie).
  </string>
  <string name="demo_title_pager_1">
    Kohii + ViewPager (1)
  </string>
  <string name="demo_desc_pager_1">
    Pager (1) shows how Kohii could work in ViewPager where pages are Fragments. Each page will start the Playback with 500ms
    delay.\n\nThis demo also shows different layout in landscape and portrait orientation,
    while the Playback keeps playing smoothly.\n\nVideos are from Caminandes (CC 3.0 open movie).
  </string>
  <string name="demo_title_pager_2">
    Kohii + ViewPager (2)
  </string>
  <string name="demo_desc_pager_2">
    Pager (2) is the same with \'Kohii + Pager (1)\', but each page is a View instead of a Fragment.
    \n\nVideos are from Caminandes (CC 3.0 open movie).
  </string>
  <string name="demo_title_pager_3">
    Kohii + ViewPager2 (1)
  </string>
  <string name="demo_desc_pager_3">
    Pager (2) is the same with \'Kohii + Pager (1)\', but uses the new ViewPager2 instead. Each page is a Fragment.
    \n\nVideos are from Caminandes (CC 3.0 open movie).
  </string>
  <string name="demo_title_pager_4">
    Kohii + ViewPager2 (2)
  </string>
  <string name="demo_desc_pager_4">
    Pager (2) is the same with \'Kohii + Pager (1)\', but uses the new ViewPager2 instead. Each page is a View.
    \n\nVideos are from Caminandes (CC 3.0 open movie).
  </string>
  <string name="demo_title_nested_scrollview_1">
    Kohii + (Nested) ScrollView (1)
  </string>
  <string name="demo_desc_nested_scrollview_1">
    (Nested) ScrollView (1) uses content from https://design.google/library/making-motion-meaningful/
    where sub Videos are taken from another Material Design documentation.\n\nClicking to an item will
    open Single player in new Activity. The Playback keeps playing smoothly.
  </string>
  <string name="demo_title_nested_scrollview_2">
    Kohii + (Nested) ScrollView (2)
  </string>
  <string name="demo_desc_nested_scrollview_2">
    (Nested) ScrollView (2) uses default long text with the movie \'Big Buck Bunny\'.\n\nClicking to an item will
    open Single player in a DialogFragment. The Playback keeps playing smoothly.
  </string>
  <string name="demo_title_master_detail">
    Kohii + Master/Detail (1)
  </string>
  <string name="demo_desc_master_detail">
    2 Fragments (Master Fragment and Detail Fragment) in one main Fragment.
    \n\nThis demo shows how Kohii could work in complicated scenario. It doesn\'t really focus on the "Master" and "Detail" aspect (so their content are just randomly picked from other demo).
  </string>
  <string name="demo_title_fbook">
    Kohii + Facebook
  </string>
  <string name="demo_desc_fbook">
    Facebook Video list demonstration. It will automatically open fullscreen Player on landscape mode (judged by resource.configuration.landscape flag).
    It also supports floating Player (same concept as Picture-In-Picture, but not for Activity).
  </string>
  <string name="demo_title_youtube_1">
    Kohii + YouTube (1)
  </string>
</resources>