<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Nam Nguyen, nam@ene.im
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <androidx.appcompat.widget.LinearLayoutCompat
      android:id="@+id/container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/libIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lib_intro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />

    <com.google.android.exoplayer2.ui.AspectRatioFrameLayout
        android:id="@+id/dummyPlayer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="240dp"
        app:resize_mode="fixed_width"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/small_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recyclerViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#004d40"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        >

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/recyclerViewTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:text="Below is a RecyclerView"
          android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
          android:textColor="#FFFF00"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="HardcodedText"
          />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerView"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:orientation="vertical"
          app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
          app:layout_constraintDimensionRatio="1:1"
          app:layout_constraintTop_toBottomOf="@id/recyclerViewTitle"
          app:spanCount="1"
          />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.exoplayer2.ui.AspectRatioFrameLayout
        android:id="@+id/dummyPlayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="240dp"
        app:resize_mode="fixed_width"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/large_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />
  </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>