<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Nam Nguyen, nam@ene.im
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <variable
        name="presenter"
        type="kohii.v1.sample.ui.Presenter"
        />
  </data>

  <androidx.core.widget.NestedScrollView
      android:id="@+id/scrollView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        >

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/pager_horizontal_space"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          android:minHeight="@dimen/pager_horizontal_space_x3"
          android:onClick='@{(view) -> presenter.onItemClick("kohii.v1.sample.ui.debug.DebugFragment")}'
          android:padding="@dimen/pager_horizontal_space"
          >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="@dimen/pager_horizontal_space"
            >

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Kohii + Debug (1)"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
              tools:ignore="HardcodedText"
              />

          <Space
              android:layout_width="match_parent"
              android:layout_height="@dimen/pager_horizontal_space_base"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:lineSpacingMultiplier="1.15"
              android:maxLines="6"
              android:text="@string/large_text"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
              />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/pager_horizontal_space"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          android:minHeight="@dimen/pager_horizontal_space_x3"
          android:onClick='@{(view) -> presenter.onItemClick("kohii.v1.sample.ui.reuse.OneSurfaceFragment")}'
          android:padding="@dimen/pager_horizontal_space"
          >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="@dimen/pager_horizontal_space"
            >

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Kohii + RecyclerView (4)"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
              tools:ignore="HardcodedText"
              />

          <Space
              android:layout_width="match_parent"
              android:layout_height="@dimen/pager_horizontal_space_base"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:lineSpacingMultiplier="1.15"
              android:text="@string/demo_desc_recycler_view_4"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
              />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/pager_horizontal_space"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          android:minHeight="@dimen/pager_horizontal_space_x3"
          android:onClick='@{(view) -> presenter.onItemClick("kohii.v1.sample.ui.pager.PagerMainFragment")}'
          android:padding="@dimen/pager_horizontal_space"
          >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="@dimen/pager_horizontal_space"
            >

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Kohii + Pager (1)"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
              tools:ignore="HardcodedText"
              />

          <Space
              android:layout_width="match_parent"
              android:layout_height="@dimen/pager_horizontal_space_base"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:lineSpacingMultiplier="1.15"
              android:text="@string/demo_desc_pager_1"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
              />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/pager_horizontal_space"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          android:minHeight="@dimen/pager_horizontal_space_x3"
          android:onClick='@{(view) -> presenter.onItemClick("kohii.v1.sample.ui.rview.RecyclerViewFragment")}'
          android:padding="@dimen/pager_horizontal_space"
          >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="@dimen/pager_horizontal_space"
            >

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Kohii + RecyclerView (1)"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
              tools:ignore="HardcodedText"
              />

          <Space
              android:layout_width="match_parent"
              android:layout_height="@dimen/pager_horizontal_space_base"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:lineSpacingMultiplier="1.15"
              android:text="@string/demo_desc_recycler_view_1"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
              />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/pager_horizontal_space"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          android:minHeight="@dimen/pager_horizontal_space_x3"
          android:onClick='@{(view) -> presenter.onItemClick("kohii.v1.sample.ui.mix.MixMediaFragment")}'
          android:padding="@dimen/pager_horizontal_space"
          >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="@dimen/pager_horizontal_space"
            >

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Kohii + RecyclerView (2)"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
              tools:ignore="HardcodedText"
              />

          <Space
              android:layout_width="match_parent"
              android:layout_height="@dimen/pager_horizontal_space_base"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:lineSpacingMultiplier="1.15"
              android:text="@string/demo_desc_recycler_view_2"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
              />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/pager_horizontal_space"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          android:minHeight="@dimen/pager_horizontal_space_x3"
          android:onClick='@{(view) -> presenter.onItemClick("kohii.v1.sample.ui.overlay.OverlayViewFragment")}'
          android:padding="@dimen/pager_horizontal_space"
          >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="@dimen/pager_horizontal_space"
            >

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Kohii + RecyclerView (3)"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
              tools:ignore="HardcodedText"
              />

          <Space
              android:layout_width="match_parent"
              android:layout_height="@dimen/pager_horizontal_space_base"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:lineSpacingMultiplier="1.15"
              android:text="@string/demo_desc_recycler_view_3"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
              />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/pager_horizontal_space"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          android:minHeight="@dimen/pager_horizontal_space_x3"
          android:onClick='@{(view) -> presenter.onItemClick("kohii.v1.sample.ui.motion.MotionFragment")}'
          android:padding="@dimen/pager_horizontal_space"
          >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="@dimen/pager_horizontal_space"
            >

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Kohii + (Nested) ScrollView (1)"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
              tools:ignore="HardcodedText"
              />

          <Space
              android:layout_width="match_parent"
              android:layout_height="@dimen/pager_horizontal_space_base"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:lineSpacingMultiplier="1.15"
              android:text="@string/demo_desc_nested_scrollview_1"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
              />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/pager_horizontal_space"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          android:minHeight="@dimen/pager_horizontal_space_x3"
          android:onClick='@{(view) -> presenter.onItemClick("kohii.v1.sample.ui.sview.ScrollViewFragment")}'
          android:padding="@dimen/pager_horizontal_space"
          >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="@dimen/pager_horizontal_space"
            >

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Kohii + (Nested) ScrollView (2)"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
              tools:ignore="HardcodedText"
              />

          <Space
              android:layout_width="match_parent"
              android:layout_height="@dimen/pager_horizontal_space_base"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:lineSpacingMultiplier="1.15"
              android:text="@string/demo_desc_nested_scrollview_2"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
              />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>
  </androidx.core.widget.NestedScrollView>
</layout>